# eigenda-v2-struct-rust

./: Cargo.toml  README.md  batch_header.rlp  blob_inclusion.rlp  non_signer.rlp
src/: lib.rs  sol_struct.rs
src/tests/: parser.rs
src/v2_cert/: mod.rs  rs_struct.rs  sol_struct.rs
