[package]
name = "eigenda-v2-struct-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp = { version = "0.3.10", features = ["derive"] }
alloy-primitives = { version = "0.8.14", features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8.14" }

[dev-dependencies]
num-bigint = "0.4"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
alloy = { version = "0.6", features = ["full"] }
alloy-provider = { version = "0.9.2", default-features = false }
alloy-transport = { version = "0.9.2", default-features = false }
alloy-rpc-client = { version = "0.9.2", default-features = false }
alloy-transport-http = { version = "0.9.2", default-features = false }
alloy-signer = { version = "0.9.2" }
